Bug #19412
Crash in PyModules::shutdown when non-serve()'ing module is loaded
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
Seen while writing regression test for http://tracker.ceph.com/issues/19258 -- I think others have been running on nodes that didn't have a dependency, so weren't loading the actual modules. It works fine without the fsstatus module loaded.
It's because we're calling the module's shutdown() in a finisher and then relying on the join() on the serve() thread to wait for that, which doesn't work if a module isn't serving anything.
History
#1 Updated by John Spray almost 6 years ago
- Status changed from In Progress to Fix Under Review
- Target version set to v12.0.0
#2 Updated by Kefu Chai almost 6 years ago
- Status changed from Fix Under Review to Resolved