mgr: fix waiting for module shutdown() before destroying

Fixes: http://tracker.ceph.com/issues/19412
Signed-off-by: John Spray <john.spray@redhat.com>